<resources>
    <string name="app_name">轻阅</string>
    <string name="main">轻阅</string>

    <string name="hello_world">你好世界</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_splash">扉页</string>
    <string name="title_activity_welcome">欢迎</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">你好这是一个fragment</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_regard">关于</string>
    <string name="title_activity_login">登录</string>


    <string name="messsge_now_no_net">当前没有网络连接，请设置</string>
    <string name="message_set_net">设置移动网络</string>
    <string name="message_set_wifi">设置无线网络</string>
    <string name="message_in_main">[轻阅]使用完全免费，在使用过程中会产生移动网络或wlan流量， 具体流量资费请咨询您的网络运营商，在使用过程中[轻阅]需要：进行网络通信获取网络状态， WLAN状态。\n\n 为了提供更好的用户体验，[轻阅]将收集用户部分信息，您是否同意？\n\n</string>

    <string name="messag_no_msg">不再显示提醒</string>

    <string name="message_agree">同意</string>
    <string name="message_in_exit">退出</string>
    <string name="message_savepic_photo">保存图片到相册</string>
    <string name="message_savepic_no">取消</string>
    <string name="home_page_item_title">标题</string>
    <string name="home_page_item_author">作者</string>
    <string name="home_page_item_content">内容</string>
    <string name="home_page_item_comment">223123</string>
    <string name="question_message_can_share">点击右上角可分享</string>
    <string name="queation_date">November 03,2015</string>
    <string name="question_title">问题的标题</string>
    <string name="queation_discript">问题的描述内容，问题的描述内容问题的描述内 容问题的描述内容问题的描述内容问题的描述内容问题的描述内容 问题的描述内容问题的描述内容问题的描述内容问题的描述内容问题 的描述内容问题的描述内容问题的描述内容问题的描述内容问题的描 述内容问题的描述内容问题的描述内容问题的描述内容</string>
    <string name="queation_anwser_title">问题的回答</string>
    <string name="queation_anwser_content">问题的描述内容，问题的描述内容问题的描述内 容问题的描述内容问题的描述内容问题的描述内容问题的描述内容 问题的描述内容问题的描述内容问题的描述内容问题的描述内容问题 的描述内容问题的描述内容问题的描述内容问题的描述内容问题的描 述内容问题的描述内容问题的描述内容问容\n</string>
    <string name="queation_edit">编辑\n</string>
    <string name="question_commont">评论</string>
    <string name="song_lrc">歌词</string>
    <string name="login_title">登录</string>
    <string name="login_phone_tick">手机号码或者昵称</string>
    <string name="login_password">输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_new_user_sign_in">新用户注册</string>
    <string name="login_other_login">第三方登录</string>
    <string name="about_title">关于</string>
    <string name="about_content_text">轻阅在手，值得拥有</string>
    <string name="setting_title">设置</string>
    <string name="setting_browser_set">浏览设置</string>
    <string name="setting_set_moon">夜间模式切换</string>
    <string name="setting_more">更多</string>
    <string name="setting_exit_login">退出当前登录</string>
    <string name="article_fragment_item_date">时间</string>
    <string name="article_fragment_item_title">文章标题</string>
    <string name="article_fragment_item_author">作者</string>
    <string name="article_fragment_item_content">文本内容</string>
    <string name="article_fragment_item_editor">编辑</string>
    <string name="article_fragment_item_commont">评论数量</string>
    <string name="article_fragment_item_buttom_author">作者</string>
    <string name="article_fragment_item_trick">昵称</string>
    <string name="article_fragment_item_author2">作者2</string>


    <!-- java中  配置文件中的内容-->
    <string name="question_now_comments">当前评论:</string>

    <string name="now_is_lastest_content">已是最新内容</string>
    <string name="now_is_not_content">已无更多内容</string>
    <string name="now_is_first_page">当前已是第一页</string>
    <string name="now_is_lastest_page">当前已是最后一夜</string>
    <string name="more_controller">更多操作</string>
    <string name="save_sucess">保存成功!</string>
    <string name="authorization_success">授权成功</string>
    <string name="authorization_fail">授权失败</string>
    <string name="authorization_cancle">授权取消</string>
    <string name="now_no_data_to_share">当前无数据可分享</string>
    <string name="switch_mode">切换模式</string>
    <string name="exit_now_login_in">退出当前账号成功</string>
    <string name="now_no_account_login">当前无账号登录</string>
    <string name="to_give_score">去评分</string>
    <string name="feedback">反馈</string>
    <string name="user_agreement">用户协议</string>
    <string name="version">版本号</string>


    <string name="person_now_login_in">立即登陆</string>
    <string name="person_setting">设置</string>
    <string name="person_about">关于</string>
    <string name="person_recommend_app">推荐应用</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_regard">RegardActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
</resources>
