<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:gravity="center_vertical"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:contentPadding="5dp"
    tools:context="com.chsj.qingyue.fragments.person.PersonFragment">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/person_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/person_item_selector"
            android:clickable="true"
            android:drawableLeft="@mipmap/user_default_icon"
            android:drawablePadding="20dp"
            android:drawableRight="@mipmap/one_details_page_arrowhead"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/person_now_login_in"
            android:textColor="#202020"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />


        <TextView
            android:id="@+id/perosn_setting"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/person_item_selector"
            android:clickable="true"
            android:drawableLeft="@mipmap/setting"
            android:drawablePadding="20dp"
            android:drawableRight="@mipmap/one_details_page_arrowhead"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/person_setting"
            android:textColor="#202020"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/person_about"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/person_item_selector"
            android:clickable="true"
            android:drawableLeft="@mipmap/copyright_default_icon"
            android:drawablePadding="20dp"
            android:drawableRight="@mipmap/one_details_page_arrowhead"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/person_about"
            android:textColor="#202020"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/person_moreApp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom|left"
            android:text="@string/person_recommend_app"
            android:textSize="13sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0" />
    </LinearLayout>

</android.support.v7.widget.CardView>
